--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "~18.2.14",
     "expo": "~49.0.15",
+    "expo-router": "^2.0.12",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.2",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
