--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.9",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "~18.2.14",
+    "axios": "^1.6.1",
     "expo": "~49.0.15",
     "expo-router": "^2.0.12",
     "expo-status-bar": "~1.6.0",
@@ -22,6 +23,9 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.2",
+    "react-query": "^3.39.3",
+    "react-redux": "^8.1.3",
+    "redux-logger": "^3.0.6",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
