--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -24,6 +25,7 @@
     "react-native-load-more-flatlist": "^1.0.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-toast-message": "^2.1.7",
     "react-native-vector-icons": "^10.0.2",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
